--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <h1>Odin Recipes</h1>
 
-<a href="recipes/green_shake.html">Green Shake</a>
+    
+    
+    <a href="/home/reg/odin-s-recipes/recipes/green_shake.html">1</a>
 
 </body>
 </html>
